--- a/css/style.css
+++ b/css/style.css
@@ -359,12 +359,74 @@ input {
   height: 100vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  background-image: url(../assets/images/symbol-mobile.svg);
+  position: relative;
+  z-index: 1;
+}
+.header::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../assets/images/symbol.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position-x: center;
+  z-index: 0;
 }
-.header__adress {
+.header-full {
+  position: relative;
+  z-index: 2;
+  display: grid;
+  grid-template-rows: 45px 55px;
+}
+.header-info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 10px 15px;
+  position: relative;
+  z-index: 1;
+  align-items: center;
+}
+.header-info::before {
+  content: "";
+  background: rgba(245, 245, 250, 0.2);
+  width: 100%;
+  height: 45px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 0;
+}
+.header-lang {
+  font-size: 0;
+  position: relative;
+  z-index: 2;
+}
+.header-lang__item {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+}
+.header-lang__item:not(:last-child) {
+  margin-right: 14px;
+}
+.header-lang__item:nth-child(2) {
+  margin-right: 7px;
+}
+.header-lang__item--active {
+  display: inline-block;
+  padding: 5px 7px;
+  width: 33px;
+  height: 25px;
+  background: #F0145A;
+  border-radius: 8px;
+}
+.header-adress {
   display: none;
   font-weight: 400;
   font-size: 16px;
@@ -372,10 +434,43 @@ input {
   text-align: right;
   color: #B3B3BA;
 }
-.header__fb {
-  display: none;
+.header-phone {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #FFFFFF;
+  position: relative;
+  z-index: 2;
 }
-.header__title {
+.header-fb {
+  display: none;
+  width: 24px;
+  height: 24px;
+}
+.header-graphic {
+  display: grid;
+  grid-template-columns: 1fr 32px;
+  padding: 15px;
+}
+.header-graphic-left {
+  display: grid;
+  grid-template-columns: 90px 1fr;
+  align-items: start;
+}
+.header-graphic-logo {
+  width: 69.33px;
+  height: 32px;
+}
+.header-graphic-linkmb {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.header-title {
+  position: relative;
+  z-index: 2;
   font-weight: 700;
   font-size: 38px;
   line-height: 46px;
@@ -387,7 +482,9 @@ input {
   display: grid;
   align-self: center;
 }
-.header__scroll {
+.header-scroll {
+  position: relative;
+  z-index: 2;
   width: 42px;
   height: 42px;
   opacity: 0.5;
@@ -401,36 +498,11 @@ input {
   background-repeat: no-repeat;
   background-position: center;
 }
-.header-top {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 10px 15px;
-  width: 100%;
-  height: 45px;
-  background: rgba(245, 245, 250, 0.2);
-  align-items: center;
+.header-menu {
+  display: none;
 }
-.header-bottom {
-  display: grid;
-  grid-template-columns: 1fr 32px;
-  padding: 15px;
-}
-.header-bottom__left {
-  display: grid;
-  grid-template-columns: 90px 1fr;
-  align-items: center;
-}
-.header-bottom__logo {
-  width: 69.33px;
-  height: 32px;
-}
-.header-bottom__link {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-}
-.header-bottom__menu-btn {
+
+.burger {
   width: 32px;
   height: 32px;
   position: relative;
@@ -438,7 +510,7 @@ input {
   overflow: hidden;
   align-items: center;
 }
-.header-bottom__menu-btn span {
+.burger span {
   width: 18px;
   height: 2px;
   background-color: #FFFFFF;
@@ -446,44 +518,174 @@ input {
   top: 50%;
   left: calc(50% - 9px);
 }
-.header-bottom__menu-btn span:nth-of-type(2) {
+.burger span:nth-of-type(2) {
   top: calc(50% - 5px);
 }
-.header-bottom__menu-btn span:nth-of-type(3) {
+.burger span:nth-of-type(3) {
   top: calc(50% + 5px);
 }
 
-.nav-top {
-  font-size: 0;
+@media (min-width: 768px) {
+  .header-full {
+    display: grid;
+    grid-template-rows: 1fr 60px 1fr;
+  }
+  .header-info {
+    display: flex;
+    padding-top: 50px;
+    padding-left: 60px;
+    margin-bottom: 30px;
+    padding-bottom: 0;
+    align-items: center;
+  }
+  .header-info::before {
+    display: none;
+  }
+  .header-lang {
+    display: inline-block;
+  }
+  .header-adress {
+    display: inline-block;
+  }
+  .header-fb {
+    display: inline-block;
+  }
+  .header-graphic {
+    padding-left: 60px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .header-graphic-logo {
+    width: 130px;
+    height: 60px;
+  }
+  .header-graphic-linkmb {
+    display: none;
+  }
+  .header-menu {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    margin-top: 30px;
+    padding-left: 60px;
+  }
+  .header-menu a {
+    text-align: left;
+    color: #FFFFFF;
+  }
+  .header-menu a:not(:last-child) {
+    margin-right: 15px;
+  }
+  .nav-tablet-top:not(:last-child) {
+    margin-right: 6px;
+  }
+  .nav-tablet-top:not(:last-child)::after {
+    content: "";
+    margin-left: 6px;
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background: #E6E6F0;
+    border-radius: 100%;
+  }
+  .burger {
+    display: none;
+  }
 }
-.nav-top__item {
+@media (min-width: 1024px) {
+  .header::before {
+    background-size: contain;
+    background-position-x: center;
+  }
+  .header-full {
+    display: grid;
+    grid-template-rows: 25px 60px 60px;
+  }
+  .header-info {
+    justify-self: end;
+    padding-right: 60px;
+    margin-bottom: 0;
+  }
+  .header-graphic {
+    padding-top: 10px;
+  }
+  .header-menu {
+    justify-self: end;
+    padding-right: 60px;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+}
+@media (min-width: 1920px) {
+  .header-info {
+    justify-self: end;
+    padding-right: 160px;
+    margin-bottom: 0;
+  }
+  .header-graphic {
+    padding-top: 10px;
+    padding-left: 160px;
+  }
+  .header-menu {
+    justify-self: end;
+    padding-right: 160px;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+}
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  background: #F5F5FA;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer-adress {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #323264;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.footer-map {
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
-  text-align: center;
   letter-spacing: 1px;
-  color: #FFFFFF;
+  text-transform: uppercase;
+  color: #24A3FF;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
-.nav-top__item:not(:last-child) {
-  margin-right: 14px;
-}
-.nav-top__item:nth-child(2) {
-  margin-right: 7px;
-}
-.nav-top__item--active {
-  display: inline-block;
-  padding: 5px 7px;
-  width: 33px;
-  height: 25px;
-  background: #F0145A;
-  border-radius: 8px;
-}
-.nav-top__phone {
+.footer-phone {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   text-align: right;
-  color: #FFFFFF;
+  color: #46466E;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.footer-phone::before {
+  content: "";
+  background-image: url(../assets/images/facebook-footer.svg);
+}
+.footer-email {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #24A3FF;
+}
+.footer-copyright {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #B3B3BA;
+  margin-bottom: 0;
 }
 
 .advantages-links {
@@ -547,7 +749,7 @@ input {
 
 .main-services {
   border-radius: 0px 0px 12px 12px;
-  padding-top: 30px;
+  padding-top: 0px;
   padding-bottom: 60px;
   position: relative;
 }
