--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,12 +2,82 @@
     height: 100vh;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    background-image: url(../assets/images/symbol-mobile.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
+    position: relative;
+    z-index: 1;
+    &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../assets/images/symbol.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        z-index: 0;
+    }
 
-    &__adress {
+    &-full {
+        position: relative;
+        z-index: 2;
+        display: grid;
+        grid-template-rows: 45px 55px;
+    }
+
+    &-info {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10px 15px;
+        position: relative;
+        z-index: 1;
+        &::before {
+            content: "";
+            background: rgba(245, 245, 250, 0.2);
+            width: 100%;
+            height: 45px;
+            top: 0;
+            left: 0;
+            position: absolute;
+            z-index: 0;
+        }
+        
+        align-items: center;
+    }
+
+    &-lang {
+        font-size: 0;
+        position: relative;
+        z-index: 2;
+    
+        &__item {
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 15px;
+            text-align: center;
+            letter-spacing: 1px;
+            color: #FFFFFF;
+    
+            &:not(:last-child) {
+                margin-right: 14px;
+            }
+    
+            &:nth-child(2) {
+                margin-right: 7px;
+            }
+    
+            &--active {
+                display: inline-block;
+                padding: 5px 7px;
+                width: 33px;
+                height: 25px;
+                background: #F0145A;
+                border-radius: 8px;
+            }
+        }
+    }
+
+    &-adress {
         display: none;
         font-weight: 400;
         font-size: 16px;
@@ -15,12 +85,50 @@
         text-align: right;
         color: #B3B3BA;
     }
+
+    &-phone {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: right;
+        color: #FFFFFF;
+        position: relative;
+        z-index: 2;
+    }
     
-    &__fb {
+    &-fb {
         display: none;
+        width: 24px;
+        height: 24px;
     }
 
-    &__title {
+    &-graphic {
+        display: grid;
+        grid-template-columns: 1fr 32px;
+        padding: 15px;
+
+        &-left {
+            display: grid;
+            grid-template-columns: 90px 1fr;
+            align-items: start;
+        }
+
+        &-logo {
+            width: 69.33px;
+            height: 32px;
+        }
+
+        &-linkmb {
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 24px;
+            color: #FFFFFF;
+        }
+    }
+    
+    &-title {
+        position: relative;
+        z-index: 2;
         font-weight: 700;
         font-size: 38px;
         line-height: 46px;
@@ -33,7 +141,9 @@
         align-self: center;
     }
 
-    &__scroll {
+    &-scroll {
+        position: relative;
+        z-index: 2;
         width: 42px;
         height: 42px;
         opacity: 0.5;
@@ -48,105 +158,176 @@
         background-position: center;
     }
 
-    &-top {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        padding: 10px 15px;
-        width: 100%;
-        height: 45px;
-        background: rgba(245, 245, 250, 0.2);
-        align-items: center;
-    }
-
-    &-bottom {
-        display: grid;
-        grid-template-columns: 1fr 32px;
-        padding: 15px;
-
-        &__left {
-            display: grid;
-            grid-template-columns: 90px 1fr;
-            align-items: center;
-        }
-
-        &__logo {
-            width: 69.33px;
-            height: 32px;
-        }
-
-        &__link {
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 24px;
-            color: #FFFFFF;
-        }
-
-        &__menu-btn {
-            width: 32px;
-            height: 32px;
-            position: relative;
-            z-index:2;
-            overflow: hidden;
-            align-items: center;
-
-
-            & span {
-                width: 18px;
-                height: 2px;
-                background-color: #FFFFFF;
-                position: absolute;
-                top: 50%;
-                left: calc(50% - 9px);
-            }
-
-            & span:nth-of-type(2) {
-                top: calc(50% - 5px);
-            }
-            & span:nth-of-type(3) {
-                top: calc(50% + 5px);
-            }
-        }
+    &-menu {
+        display: none;
     }
 }
 
-.nav-top {
-    font-size: 0;
+.burger {
+    width: 32px;
+    height: 32px;
+    position: relative;
+    z-index:2;
+    overflow: hidden;
+    align-items: center;
 
-    &__item {
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 15px;
-        text-align: center;
-        letter-spacing: 1px;
-        color: #FFFFFF;
-
-        &:not(:last-child) {
-            margin-right: 14px;
-        }
-
-        &:nth-child(2) {
-            margin-right: 7px;
-        }
-
-        &--active {
-            display: inline-block;
-            padding: 5px 7px;
-            width: 33px;
-            height: 25px;
-            background: #F0145A;
-            border-radius: 8px;
-        }
+    & span {
+        width: 18px;
+        height: 2px;
+        background-color: #FFFFFF;
+        position: absolute;
+        top: 50%;
+        left: calc(50% - 9px);
     }
 
-    &__phone {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 20px;
-        text-align: right;
-        color: #FFFFFF;
+    & span:nth-of-type(2) {
+        top: calc(50% - 5px);
+    }
+    & span:nth-of-type(3) {
+        top: calc(50% + 5px);
     }
 }
 
 @media (min-width: 768px) {
+    .header {
+        &-full {
+            display: grid;
+            grid-template-rows: 1fr 60px 1fr;
+        }
+        &-info {
+            display: flex;
+            padding-top: 50px;
+            padding-left: 60px;
+            margin-bottom: 30px;
+            padding-bottom: 0;
+            align-items: center;
+            
+            &::before {
+                display: none;
+            }
+        }
 
+        &-lang {
+            display: inline-block;
+        }
+
+        &-adress {
+            display: inline-block;
+        }
+
+        &-fb {
+            display: inline-block;
+        }
+
+        &-graphic {
+            padding-left: 60px;
+            padding-top: 0;
+            padding-bottom: 0;
+
+            &-logo {
+                width: 130px;
+                height: 60px;
+            }
+
+            &-linkmb {
+                display: none;
+            }
+        }
+
+        &-menu {
+            display: inline-block;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 20px;
+            margin-top: 30px;
+            padding-left: 60px;
+
+            & a {
+                text-align: left;
+                color: #FFFFFF;
+                &:not(:last-child) {
+                    margin-right: 15px;
+                }
+            }
+        }
+    }
+
+    .nav-tablet-top {
+        &:not(:last-child) {
+            margin-right: 6px;
+        }
+
+        &:not(:last-child)::after {
+            content: "";
+            margin-left: 6px;
+            display: inline-block;
+            width: 6px;
+            height: 6px;
+            background: #E6E6F0;
+            border-radius: 100%;
+        }  
+    }
+
+    .burger {
+        display: none;
+    }
 }
+
+@media (min-width: 1024px) {
+    .header {
+        &::before {
+            background-size: contain;
+            background-position-x: center;
+        }
+
+        &-full {
+            display: grid;
+            grid-template-rows: 25px 60px 60px;
+        }
+
+        &-info {
+            justify-self: end;
+            padding-right: 60px;
+            margin-bottom: 0;
+            
+        }
+
+        &-graphic {
+            padding-top: 10px;
+        }
+
+        &-menu {
+            justify-self: end;
+            padding-right: 60px;
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+    }
+}
+
+@media (min-width: 1920px) {
+    .header {
+        &-info {
+            justify-self: end;
+            padding-right: 160px;
+            margin-bottom: 0;
+            
+        }
+
+        &-graphic {
+            padding-top: 10px;
+            padding-left: 160px;
+        }
+
+        &-menu {
+            justify-self: end;
+            padding-right: 160px;
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+    }
+}
+    
+
+
+
