--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./normalize";
 @import "./scafolding";
 @import "./header";
+@import "./footer";
 
 .advantages-links {
     padding-top: 30px;
@@ -67,7 +68,7 @@
 
 .main-services {
     border-radius: 0px 0px 12px 12px;
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 60px;
     position: relative;
 }
@@ -300,6 +301,7 @@
         padding-left: 60px;
         padding-right: 60px;
     }
+
 
     .nav-main-screen {
         margin-bottom: 40px;
